solve: 100vh on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-html {
-  height: -webkit-fill-available;
-}
-
-body {
-  height: -webkit-fill-available;
-}
